--- a/Sources/highway/Highway.xcodeproj/xcshareddata/xcschemes/SwiftFormatWorkerMock.xcscheme
+++ b/Sources/highway/Highway.xcodeproj/xcshareddata/xcschemes/SwiftFormatWorkerMock.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FD3F8A7121DDE7E700BBDA58"
+               BuildableName = "SwiftFormatWorkerMock.framework"
+               BlueprintName = "SwiftFormatWorkerMock"
+               ReferencedContainer = "container:Highway.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -12,16 +28,6 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "FDC156E221C5347D00E04B44"
-               BuildableName = "SourceryWorkerTests.xctest"
-               BlueprintName = "SourceryWorkerTests"
-               ReferencedContainer = "container:Highway.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -36,6 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "FD3F8A7121DDE7E700BBDA58"
+            BuildableName = "SwiftFormatWorkerMock.framework"
+            BlueprintName = "SwiftFormatWorkerMock"
+            ReferencedContainer = "container:Highway.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -45,6 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "FD3F8A7121DDE7E700BBDA58"
+            BuildableName = "SwiftFormatWorkerMock.framework"
+            BlueprintName = "SwiftFormatWorkerMock"
+            ReferencedContainer = "container:Highway.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
