--- a/Sources/highway/Highway.xcodeproj/xcshareddata/xcschemes/AutomateHighway-Tests.xcscheme
+++ b/Sources/highway/Highway.xcodeproj/xcshareddata/xcschemes/AutomateHighway-Tests.xcscheme
@@ -292,6 +292,16 @@
                ReferencedContainer = "container:Highway.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FDEE7A69222EC94F00D6481F"
+               BuildableName = "CarthageWorkerTests.xctest"
+               BlueprintName = "CarthageWorkerTests"
+               ReferencedContainer = "container:Highway.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
