--- a/Sources/highway/Highway.xcodeproj/xcshareddata/xcschemes/AutomateHighway.xcscheme
+++ b/Sources/highway/Highway.xcodeproj/xcshareddata/xcschemes/AutomateHighway.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FDEE7A69222EC94F00D6481F"
+               BuildableName = "CarthageWorkerTests.xctest"
+               BlueprintName = "CarthageWorkerTests"
+               ReferencedContainer = "container:Highway.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
