Ignoring files that always change

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,20 @@ Carthage
 /HighwaySetup/.build
 /HighwaySetup/HighwaySetup.xcodeproj
 /Highway.xcodeproj
+/Sources/Stub/SwiftPackageDependencyService.json
+/Sources/.sourcery-Arguments.yml
+/Sources/.sourcery-CarthageWorker.yml
+/Sources/.sourcery-Errors.yml
+/Sources/.sourcery-Git.yml
+/Sources/.sourcery-GitHooks.yml
+/Sources/.sourcery-HighwayDispatch.yml
+/Sources/.sourcery-HWSetup.yml
+/Sources/.sourcery-POSIX.yml
+/Sources/.sourcery-SignPost.yml
+/Sources/.sourcery-SourceryWorker.yml
+/Sources/.sourcery-Stub.yml
+/Sources/.sourcery-SwiftFormatWorker.yml
+/Sources/.sourcery-Task.yml
+/Sources/.sourcery-Terminal.yml
+/Sources/.sourcery-Url.yml
+/Sources/.sourcery-XCBuild.yml
