Untrack generatated yml files

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ Carthage
 /Sources/.sourcery-Url.yml
 /Sources/.sourcery-XCBuild.yml
 /Sources/Stub/SwiftPackageDumpService.json
+/Sources/.sourcery-Highway.yml
